@@ -13,6 +13,8 @@ INSTALL_TESTS_ENVIRONMENT = env \
 	IOLIBS="$(DESTDIR)$(iolibdir)" \
 	LD_LIBRARY_PATH="$(DESTDIR)$(libdir)$${LD_LIBRARY_PATH+:$${LD_LIBRARY_PATH}}"
 
+AM_CPPFLAGS += -I$(top_srcdir)
+
 noinst_PROGRAMS += test-gp-port test-port-list
 test_gp_port_CPPFLAGS = $(AM_CPPFLAGS) $(LTDLINCL) $(CPPFLAGS)
 test_gp_port_SOURCE = test-gp-port.c
